--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,11 @@ bin-release/
 *.apk
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
+# should NOT be exclud0x14630e0428B9BbA12896402257fa09035f9F7447ed as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+cache
+.git
+contracts/artifacts
+contracts/.env
+contracts/node_modules
+contracts/typechain
